tests/ui/macros/issue-100199.stderr
error[E0405]: cannot find trait `MyTrait` in the crate root
  --> $DIR/issue-100199.rs:1:1
   |
LL | #[issue_100199::struct_with_bound]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in the crate root
   |
   = note: this error originates in the attribute macro `issue_100199::struct_with_bound` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this trait
   |
LL + use traits::MyTrait;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0405`.
